# WrzDJ

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  SECURITY.md  renovate.json
server/: Dockerfile  openapi.json  pyproject.toml
server/alembic/versions/: 043_add_tidal_collection_playlist_id.py  044_add_tidal_collection_bidir.py  045_add_event_join_code.py  046_add_setbuilder_tables.py  046_admin_ai_oauth.py  047_admin_ai_oauth.py  047_llm_call_log_retention.py  048_llm_call_log_retention.py  048_llm_connector_is_default.py  049_llm_connector_health_check_columns.py  049_llm_connector_is_default.py  050_llm_connector_health_check_columns.py  050_llm_connector_monthly_token_cap.py  050_llm_feature_preference.py  051_llm_connector_monthly_token_cap.py  051_llm_feature_preference.py  052_llm_connector_monthly_token_cap.py  053_add_setbuilder_pool_tables.py  054_add_set_share_token.py  055_add_curve_templates.py  056_org_llm_connector.py  057_add_vibe_consensus_settings.py  058_add_set_pairings.py  059_add_set_transition_overlap.py  060_add_set_agent_history.py  061_add_request_accepted_at.py  062_master_tracks_table.py  063_add_request_isrc.py  064_add_pool_track_enrichment_status.py  065_add_set_taste_profile_resets.py  a11334c031bb_add_frictionless_join_flags.py
server/app/: main.py
server/app/api/: __init__.py  admin.py  admin_llm.py  auth.py  bridge.py  collect.py  deps.py  events.py  guest.py  kiosk.py  llm.py  public.py  requests.py  setbuilder.py  setbuilder_share.py  sse.py
server/app/core/: config.py  csv_safe.py  pagination.py  rate_limit.py
server/app/models/: __init__.py  curve_template.py  event.py  llm_connector.py  llm_feature_preference.py  request.py  set.py  set_agent.py  set_pairing.py  set_pool.py  set_taste_profile.py  system_settings.py  track.py  track_vibe.py  user.py
server/app/schemas/: ai_settings.py  collect.py  (+10 more)
server/scripts/: export_openapi.py
server/tests/: conftest.py  test_accepted_at.py  test_account.py  test_admin.py  test_admin_ai.py  test_api.py  test_api_contracts.py  test_backfill_tracks.py  test_banner.py  test_batch_operations.py  test_beatport.py  test_beatport_adapter.py  test_beatport_api.py  test_bg_fresh_sessions.py  test_bridge_api.py  test_bridge_commands.py  test_collect_dj.py  test_collect_public.py  test_config.py  test_cors.py  test_dedup.py  test_dev_auth_bypass.py  test_dual_code_routing.py  test_email_verification.py  test_enrichment_store_writes.py  test_event_bus.py  test_events.py  test_export.py  test_frictionless_ensure_name.py  test_frictionless_event_api.py  test_frictionless_model.py  test_frictionless_preferences.py  test_frictionless_seed.py  test_guest_merge.py  test_guest_names.py  test_guest_now_playing.py  test_human_verification.py  test_input_validation.py  test_integration_multi_sync.py  test_kiosk.py  (+84 more)
(+397 files in other folders)
