[project]
name = "wrzdj-server"
version = "0.1.0"
description = "WrzDJ API Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "bcrypt>=4.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.27",
    "spotipy>=2.23.0",
    "slowapi>=0.1.9",
    "tidalapi>=0.7.0",
    # SECURITY: minimum versions per 2026-04-08 audit P0 CVEs.
    # Bumping transitives to direct deps to enforce floor.
    "Pillow>=12.1.1",        # CVE-2026-25990 (banner upload)
    "cryptography>=46.0.7",  # CVE-2026-26007, 34073, 39892 (Fernet + JWT)
    "PyJWT>=2.12.0",         # CVE-2026-32597 (auth lib)
    "aiohttp>=3.13.4",       # 10x CVE-2026-* (HTTP client)
    "requests>=2.33.0",      # CVE-2026-25645 (URL parsing)
    # SECURITY: minimum versions per 2026-05-07 audit.
    "python-dotenv>=1.2.2",  # CVE-2026-28684 (transitive from pydantic-settings chain)
"mako>=1.3.12",          # CVE-2026-44307 (transitive from alembic)
    "pyasn1>=0.6.3",         # CVE-2026-30922 (transitive from cryptography chain)
    "anthropic>=0.40.0",
    "resend>=2.0.0",
    "better-profanity>=0.7.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "freezegun>=1.2.0",
    "pygments>=2.20.0",      # CVE-2026-4539 (transitive from bandit/pip-audit via rich)
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# F821: Allow forward references in SQLAlchemy models (string annotations)
# UP042: Keep (str, Enum) pattern for compatibility with existing code
# E711/E712: SQLAlchemy requires == None/True syntax for SQL column comparisons
ignore = ["UP042", "E711", "E712"]

[tool.ruff.lint.per-file-ignores]
# Allow forward references (F821) in SQLAlchemy models
"app/models/*.py" = ["F821"]
# Allow imports after helper function definitions in test files and services
"tests/*.py" = ["E402"]
"app/services/now_playing.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-branch --cov-fail-under=85"

[tool.coverage.run]
source = ["app"]
omit = ["app/scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
